@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020-2024 Hedera Hashgraph, LLC
+ * Copyright (C) 2024-2025 Hedera Hashgraph, LLC
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,29 +20,38 @@ import static com.swirlds.common.io.utility.FileUtils.getAbsolutePath;
 import static com.swirlds.common.io.utility.FileUtils.rethrowIO;
 import static com.swirlds.common.threading.manager.AdHocThreadManager.getStaticThreadManager;
 import static com.swirlds.logging.legacy.LogMarker.EXCEPTION;
+import static com.swirlds.logging.legacy.LogMarker.STARTUP;
 import static com.swirlds.platform.builder.PlatformBuildConstants.DEFAULT_CONFIG_FILE_NAME;
+import static com.swirlds.platform.builder.PlatformBuildConstants.DEFAULT_OVERRIDES_YAML_FILE_NAME;
 import static com.swirlds.platform.builder.PlatformBuildConstants.DEFAULT_SETTINGS_FILE_NAME;
-import static com.swirlds.platform.builder.PlatformBuildConstants.LOG4J_FILE_NAME;
 import static com.swirlds.platform.builder.internal.StaticPlatformBuilder.getMetricsProvider;
+import static com.swirlds.platform.builder.internal.StaticPlatformBuilder.initLogging;
 import static com.swirlds.platform.builder.internal.StaticPlatformBuilder.setupGlobalMetrics;
 import static com.swirlds.platform.config.internal.PlatformConfigUtils.checkConfiguration;
 import static com.swirlds.platform.crypto.CryptoStatic.initNodeSecurity;
-import static com.swirlds.platform.state.signed.StartupStateUtils.getInitialState;
-import static com.swirlds.platform.system.SystemExitCode.CONFIGURATION_ERROR;
+import static com.swirlds.platform.roster.RosterUtils.buildAddressBook;
+import static com.swirlds.platform.roster.RosterUtils.buildRosterHistory;
+import static com.swirlds.platform.state.signed.StartupStateUtils.copyInitialSignedState;
+import static com.swirlds.platform.system.InitTrigger.GENESIS;
+import static com.swirlds.platform.system.InitTrigger.RESTART;
 import static com.swirlds.platform.system.SystemExitCode.NODE_ADDRESS_MISMATCH;
 import static com.swirlds.platform.system.SystemExitUtils.exitSystem;
-import static com.swirlds.platform.system.address.AddressBookUtils.initializeAddressBook;
-import static com.swirlds.platform.util.BootstrapUtils.checkNodesToRun;
+import static com.swirlds.platform.util.BootstrapUtils.detectSoftwareUpgrade;
 import static com.swirlds.platform.util.BootstrapUtils.getNodesToRun;
 import static java.util.Objects.requireNonNull;
 
 import com.google.common.annotations.VisibleForTesting;
+import com.hedera.node.app.hints.impl.HintsServiceImpl;
+import com.hedera.node.app.history.impl.HistoryServiceImpl;
 import com.hedera.node.app.info.DiskStartupNetworks;
+import com.hedera.node.app.roster.RosterService;
+import com.hedera.node.app.service.addressbook.AddressBookService;
+import com.hedera.node.app.service.addressbook.impl.ReadableNodeStoreImpl;
 import com.hedera.node.app.services.OrderedServiceMigrator;
 import com.hedera.node.app.services.ServicesRegistryImpl;
-import com.hedera.node.app.store.ReadableStoreFactory;
-import com.hedera.node.app.tss.TssBaseServiceImpl;
-import com.hedera.node.app.tss.TssLibraryImpl;
+import com.hedera.node.app.state.StateLifecyclesImpl;
+import com.hedera.node.app.tss.TssBlockHashSigner;
+import com.hedera.node.internal.network.Network;
 import com.swirlds.base.time.Time;
 import com.swirlds.common.constructable.ConstructableRegistry;
 import com.swirlds.common.constructable.RuntimeConstructable;
@@ -54,41 +63,46 @@ import com.swirlds.common.io.utility.RecycleBin;
 import com.swirlds.common.merkle.crypto.MerkleCryptoFactory;
 import com.swirlds.common.merkle.crypto.MerkleCryptographyFactory;
 import com.swirlds.common.platform.NodeId;
-import com.swirlds.common.startup.Log4jSetup;
 import com.swirlds.config.api.Configuration;
 import com.swirlds.config.api.ConfigurationBuilder;
 import com.swirlds.config.extensions.sources.SystemEnvironmentConfigSource;
 import com.swirlds.config.extensions.sources.SystemPropertiesConfigSource;
+import com.swirlds.logging.legacy.payload.SavedStateLoadedPayload;
 import com.swirlds.metrics.api.Metrics;
 import com.swirlds.platform.Browser;
 import com.swirlds.platform.CommandLineArgs;
 import com.swirlds.platform.ParameterProvider;
 import com.swirlds.platform.builder.PlatformBuilder;
-import com.swirlds.platform.config.AddressBookConfig;
+import com.swirlds.platform.config.BasicConfig;
 import com.swirlds.platform.config.legacy.ConfigurationException;
 import com.swirlds.platform.config.legacy.LegacyConfigProperties;
 import com.swirlds.platform.config.legacy.LegacyConfigPropertiesLoader;
+import com.swirlds.platform.crypto.CryptoStatic;
 import com.swirlds.platform.roster.RosterHistory;
 import com.swirlds.platform.roster.RosterUtils;
-import com.swirlds.platform.state.MerkleRoot;
-import com.swirlds.platform.state.service.ReadableRosterStore;
+import com.swirlds.platform.state.PlatformMerkleStateRoot;
+import com.swirlds.platform.state.StateLifecycles;
+import com.swirlds.platform.state.address.AddressBookInitializer;
+import com.swirlds.platform.state.service.ReadableRosterStoreImpl;
+import com.swirlds.platform.state.signed.HashedReservedSignedState;
 import com.swirlds.platform.state.signed.SignedState;
+import com.swirlds.platform.state.signed.StartupStateUtils;
 import com.swirlds.platform.system.InitTrigger;
 import com.swirlds.platform.system.Platform;
 import com.swirlds.platform.system.SoftwareVersion;
 import com.swirlds.platform.system.SwirldMain;
-import com.swirlds.platform.system.SwirldState;
 import com.swirlds.platform.system.address.AddressBook;
-import com.swirlds.platform.system.address.AddressBookUtils;
 import com.swirlds.platform.util.BootstrapUtils;
 import com.swirlds.state.State;
 import com.swirlds.state.merkle.MerkleStateRoot;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.time.InstantSource;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -97,9 +111,20 @@ import org.apache.logging.log4j.Logger;
  *
  * <p>This class simply delegates to {@link Hedera}.
  */
-public class ServicesMain implements SwirldMain {
-
+public class ServicesMain implements SwirldMain<PlatformMerkleStateRoot> {
     private static final Logger logger = LogManager.getLogger(ServicesMain.class);
+
+    /**
+     * A supplier that refuses to satisfy fallback requests for a set of node ids to run
+     * simultaneously; this is only useful for certain platform testing applications
+     */
+    private static final Supplier<Set<NodeId>> ILLEGAL_FALLBACK_NODE_IDS = () -> {
+        throw new IllegalStateException("The node id must be configured explicitly");
+    };
+    /**
+     * Upfront validation on node ids is only useful for certain platform testing applications
+     */
+    private static final Predicate<NodeId> NOOP_NODE_VALIDATOR = nodeId -> true;
 
     /**
      * The {@link Hedera} singleton.
@@ -137,8 +162,16 @@ public class ServicesMain implements SwirldMain {
      * {@inheritDoc}
      */
     @Override
-    public @NonNull MerkleRoot newMerkleStateRoot() {
+    public @NonNull PlatformMerkleStateRoot newMerkleStateRoot() {
         return hederaOrThrow().newMerkleStateRoot();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public StateLifecycles<PlatformMerkleStateRoot> newStateLifecycles() {
+        return new StateLifecyclesImpl(hederaOrThrow());
     }
 
     /**
@@ -162,13 +195,13 @@ public class ServicesMain implements SwirldMain {
      *     {@link Hedera#newMerkleStateRoot()} method.</li>
      *     <li>Determine this node's <b>self id</b> by searching the <i>config.txt</i>
      *     in the working directory for any address book entries with IP addresses
-     *     local to this machine; if there is there is more than one such entry,
-     *     fail unless the command line args include a {@literal -local N} arg.</li>
+     *     local to this machine; if there is more than one such entry, fail unless
+     *     the command line args include a {@literal -local N} arg.</li>
      *     <li>Build a {@link Platform} instance from Services application metadata
      *     and the working directory <i>settings.txt</i>, providing the same
      *     {@link Hedera#newMerkleStateRoot()} method reference as the genesis state
      *     factory. (<b>IMPORTANT:</b> This step instantiates and invokes
-     *     {@link SwirldState#init(Platform, InitTrigger, SoftwareVersion)}
+     *     {@link StateLifecycles#onStateInitialized(MerkleStateRoot, Platform, InitTrigger, SoftwareVersion)}
      *     on a {@link MerkleStateRoot} instance that delegates the call back to our
      *     Hedera instance.)</li>
      *     <li>Call {@link Hedera#init(Platform, NodeId)} to complete startup phase
@@ -179,282 +212,322 @@ public class ServicesMain implements SwirldMain {
      * <p>Please see the <i>startup-phase-lifecycle.png</i> in this directory to visualize
      * the sequence of events in the startup phase and the centrality of the {@link Hedera}
      * singleton.
+     * <p>
+     * <b>IMPORTANT:</b> A surface-level reading of this method will undersell the centrality
+     * of the Hedera instance. It is actually omnipresent throughout both the startup and
+     * runtime phases of the application. Let's see why. When we build the platform, the
+     * builder will either:
+     * <ol>
+     *      <li>Create a genesis state; or,</li>
+     *      <li>Deserialize a saved state.</li>
+     * </ol>
+     * In both cases the state object will be created by the {@link Hedera#newMerkleStateRoot()}
+     * method reference bound to our Hedera instance. Because,
+     * <ol>
+     *      <li>We provided this method as the genesis state factory right above; and,</li>
+     *      <li>Our Hedera instance's constructor registered its {@link Hedera#newMerkleStateRoot()}
+     *      method with the {@link ConstructableRegistry} as the factory for the Services state root
+     *      class id.</li>
+     * </ol>
+     *  Now, note that {@link Hedera#newMerkleStateRoot()} returns {@link PlatformMerkleStateRoot}
+     *  instances that delegate their lifecycle methods to an injected instance of
+     *  {@link StateLifecycles}---and the implementation of that
+     *  injected by {@link Hedera#newMerkleStateRoot()} delegates these calls back to the Hedera
+     *  instance itself.
+     *  <p>
+     *  Thus, the Hedera instance centralizes nearly all the setup and runtime logic for the
+     *  application. It implements this logic by instantiating a {@link javax.inject.Singleton}
+     *  component whose object graph roots include the Ingest, PreHandle, Handle, and Query
+     *  workflows; as well as other infrastructure components that need to be initialized or
+     *  accessed at specific points in the Swirlds application lifecycle.
      *
      * @param args optionally, what node id to run; required if the address book is ambiguous
      */
     public static void main(final String... args) throws Exception {
+        // --- Configure platform infrastructure and derive node id from the command line and environment ---
+        initLogging();
         BootstrapUtils.setupConstructableRegistry();
-        // Determine which node to run locally
-        // Load config.txt address book file and parse address book
-        final AddressBook diskAddressBook = loadAddressBook(DEFAULT_CONFIG_FILE_NAME);
-        // parse command line arguments
-        final CommandLineArgs commandLineArgs = CommandLineArgs.parse(args);
-
-        // Only allow 1 node to be specified by the command line arguments.
+        final var commandLineArgs = CommandLineArgs.parse(args);
         if (commandLineArgs.localNodesToStart().size() > 1) {
             logger.error(
                     EXCEPTION.getMarker(),
                     "Multiple nodes were supplied via the command line. Only one node can be started per java process.");
             exitSystem(NODE_ADDRESS_MISMATCH);
+            // the following throw is not reachable in production,
+            // but reachable in testing with static mocked system exit calls.
+            throw new ConfigurationException();
         }
-
-        // get the list of configured nodes from the address book
-        // for each node in the address book, check if it has a local IP (local to this computer)
-        // additionally if a command line arg is supplied then limit matching nodes to that node id
-        final List<NodeId> nodesToRun = getNodesToRun(diskAddressBook, commandLineArgs.localNodesToStart());
-        // hard exit if no nodes are configured to run
-        checkNodesToRun(nodesToRun);
-
-        final NodeId selfId = ensureSingleNode(nodesToRun, commandLineArgs.localNodesToStart());
-
-        final var configuration = buildConfiguration();
-
-        // Register with the ConstructableRegistry classes which need configuration.
-        BootstrapUtils.setupConstructableRegistryWithConfiguration(configuration);
-
-        final var keysAndCerts =
-                initNodeSecurity(diskAddressBook, configuration).get(selfId);
-
-        setupGlobalMetrics(configuration);
-        metrics = getMetricsProvider().createPlatformMetrics(selfId);
-
-        hedera = newHedera(selfId);
-        final SoftwareVersion version = hedera.getSoftwareVersion();
-        logger.info("Starting node {} with version {}", selfId, version);
-
-        final var time = Time.getCurrent();
-        final var fileSystemManager = FileSystemManager.create(configuration);
-        final var recycleBin =
-                RecycleBin.create(metrics, configuration, getStaticThreadManager(), time, fileSystemManager, selfId);
-
+        final var platformConfig = buildPlatformConfig();
+        // Immediately initialize the cryptography and merkle cryptography factories
+        // to avoid using default behavior instead of that defined in platformConfig
         final var cryptography = CryptographyFactory.create();
         CryptographyHolder.set(cryptography);
-        // the AddressBook is not changed after this point, so we calculate the hash now
-        cryptography.digestSync(diskAddressBook);
-
-        // Initialize the Merkle cryptography
-        final var merkleCryptography = MerkleCryptographyFactory.create(configuration, cryptography);
+        final var merkleCryptography = MerkleCryptographyFactory.create(platformConfig, cryptography);
         MerkleCryptoFactory.set(merkleCryptography);
 
-        // Create initial state for the platform
+        // Determine which nodes were _requested_ to run from the command line
+        final var cliNodesToRun = commandLineArgs.localNodesToStart();
+        // Determine which nodes are _configured_ to run from the config file(s)
+        final var configNodesToRun =
+                platformConfig.getConfigData(BasicConfig.class).nodesToRun();
+        // Using the requested nodes to run from the command line, the nodes configured to run, and now the
+        // address book on disk, reconcile the list of nodes to run
+        final List<NodeId> nodesToRun =
+                getNodesToRun(cliNodesToRun, configNodesToRun, ILLEGAL_FALLBACK_NODE_IDS, NOOP_NODE_VALIDATOR);
+        // Finally, verify that the reconciliation of above node IDs yields exactly one node to run
+        final var selfId = ensureSingleNode(nodesToRun);
+
+        // --- Initialize the platform metrics and the Hedera instance ---
+        setupGlobalMetrics(platformConfig);
+        metrics = getMetricsProvider().createPlatformMetrics(selfId);
+        hedera = newHedera(metrics);
+        final var version = hedera.getSoftwareVersion();
         final var isGenesis = new AtomicBoolean(false);
-        // We want to be able to see the schema migration logs, so init logging here
-        initLogging();
-        final var reservedState = getInitialState(
-                configuration,
+        logger.info("Starting node {} with version {}", selfId, version);
+
+        // --- Build required infrastructure to load the initial state, then initialize the States API ---
+        final var maybeDiskAddressBook = loadLegacyAddressBook();
+        BootstrapUtils.setupConstructableRegistryWithConfiguration(platformConfig);
+        final var time = Time.getCurrent();
+        final var fileSystemManager = FileSystemManager.create(platformConfig);
+        final var recycleBin =
+                RecycleBin.create(metrics, platformConfig, getStaticThreadManager(), time, fileSystemManager, selfId);
+        StateLifecycles<PlatformMerkleStateRoot> stateLifecycles = hedera.newStateLifecycles();
+        final var reservedState = loadInitialState(
+                platformConfig,
                 recycleBin,
                 version,
                 () -> {
                     isGenesis.set(true);
+                    hedera.initializeConfigProvider(GENESIS);
+                    final var genesisAddressBook = maybeDiskAddressBook.orElse(null);
+                    if (!hedera.isRosterLifecycleEnabled()) {
+                        requireNonNull(genesisAddressBook);
+                    }
+                    Network genesisNetwork;
+                    try {
+                        genesisNetwork = hedera.startupNetworks().genesisNetworkOrThrow(platformConfig);
+                    } catch (Exception ignore) {
+                        // Fallback to the legacy address book if genesis-network.json or equivalent not loaded
+                        genesisNetwork = DiskStartupNetworks.fromLegacyAddressBook(maybeDiskAddressBook.orElseThrow());
+                    }
                     final var genesisState = hedera.newMerkleStateRoot();
                     hedera.initializeStatesApi(
-                            (MerkleStateRoot) genesisState,
-                            metrics,
-                            InitTrigger.GENESIS,
-                            diskAddressBook,
-                            configuration);
+                            genesisState, GENESIS, genesisNetwork, platformConfig, genesisAddressBook);
                     return genesisState;
                 },
                 Hedera.APP_NAME,
                 Hedera.SWIRLD_NAME,
-                selfId,
-                diskAddressBook);
+                selfId);
         final var initialState = reservedState.state();
+        final var state = initialState.get().getState();
         if (!isGenesis.get()) {
-            hedera.initializeStatesApi(
-                    (MerkleStateRoot) initialState.get().getState().getSwirldState(),
-                    metrics,
-                    InitTrigger.RESTART,
-                    null,
-                    configuration);
+            hedera.initializeConfigProvider(RESTART);
+            final var diskAddressBook = hedera.isRosterLifecycleEnabled() ? null : maybeDiskAddressBook.orElseThrow();
+            hedera.initializeStatesApi(state, RESTART, null, platformConfig, diskAddressBook);
         }
+        hedera.setInitialStateHash(reservedState.hash());
 
-        // Create the platform context
+        // --- Create the platform context and initialize the cryptography ---
+        final var rosterStore = new ReadableRosterStoreImpl(state.getReadableStates(RosterService.NAME));
+        final var currentRoster = requireNonNull(rosterStore.getActiveRoster());
+        // For now we convert to a legacy representation of the roster for convenience
+        final var addressBook = requireNonNull(buildAddressBook(currentRoster));
+        if (!addressBook.contains(selfId)) {
+            throw new IllegalStateException("Self node id " + selfId + " is not in the address book");
+        }
+        final var networkKeysAndCerts = initNodeSecurity(addressBook, platformConfig, Set.copyOf(nodesToRun));
+        final var keysAndCerts = networkKeysAndCerts.get(selfId);
+        cryptography.digestSync(addressBook);
         final var platformContext = PlatformContext.create(
-                configuration,
+                platformConfig,
                 Time.getCurrent(),
                 metrics,
                 cryptography,
-                FileSystemManager.create(configuration),
+                FileSystemManager.create(platformConfig),
                 recycleBin,
                 merkleCryptography);
 
-        final var stateHash = reservedState.hash();
-
-        // Initialize the address book and set on platform builder
-        final var addressBook = initializeAddressBook(selfId, version, initialState, diskAddressBook, platformContext);
-
+        // --- Now build the platform and start it ---
         final RosterHistory rosterHistory;
-        final boolean shouldUseRosterLifecycle =
-                configuration.getConfigData(AddressBookConfig.class).useRosterLifecycle();
-        if (shouldUseRosterLifecycle) {
-            final SignedState loadedSignedState = initialState.get();
-            final var state = ((MerkleStateRoot) loadedSignedState.getState());
-            final var rosterStore = new ReadableStoreFactory(state).getStore(ReadableRosterStore.class);
+        if (hedera.isRosterLifecycleEnabled()) {
             rosterHistory = RosterUtils.createRosterHistory(rosterStore);
         } else {
-            rosterHistory =
-                    RosterUtils.buildRosterHistory((State) initialState.get().getState());
+            // This constructor both does extensive validation and has the side effect of
+            // moving unused config.txt files to an archive directory; so keep calling it
+            // here until we enable the roster lifecycle
+            new AddressBookInitializer(
+                    selfId,
+                    version,
+                    detectSoftwareUpgrade(version, initialState.get()),
+                    initialState.get(),
+                    addressBook.copy(),
+                    platformContext,
+                    stateLifecycles);
+            rosterHistory = buildRosterHistory(initialState.get().getState());
         }
-
-        // Follow the Inversion of Control pattern by injecting all needed dependencies into the PlatformBuilder.
         final var platformBuilder = PlatformBuilder.create(
                         Hedera.APP_NAME,
                         Hedera.SWIRLD_NAME,
                         version,
                         initialState,
+                        stateLifecycles,
                         selfId,
-                        AddressBookUtils.formatConsensusEventStreamName(addressBook, selfId),
-                        // C.f. https://github.com/hashgraph/hedera-services/issues/14751,
-                        // we need to choose the correct roster in the following cases:
-                        //  - At genesis, a roster loaded from disk
-                        //  - At restart, the active roster in the saved state
-                        //  - At upgrade boundary, the candidate roster in the saved state IF
-                        //    that state satisfies conditions (e.g. the roster has been keyed)
+                        canonicalEventStreamLoc(selfId.id(), state),
                         rosterHistory)
                 .withPlatformContext(platformContext)
-                .withConfiguration(configuration)
+                .withConfiguration(platformConfig)
                 .withKeysAndCerts(keysAndCerts);
-
-        hedera.setInitialStateHash(stateHash);
-        // IMPORTANT: A surface-level reading of this method will undersell the centrality
-        // of the Hedera instance. It is actually omnipresent throughout both the startup
-        // and runtime phases of the application.
-        //
-        // Let's see why. When we build the platform, the builder will either:
-        //   (1) Create a genesis state; or,
-        //   (2) Deserialize a saved state.
-        // In both cases the state object will be created by the hedera::newState method
-        // reference bound to our Hedera instance. Because,
-        //   (1) We provided this method as the genesis state factory right above; and,
-        //   (2) Our Hedera instance's constructor registered its newState() method with the
-        //       ConstructableRegistry as the factory for the Services Merkle tree class id.
-        //
-        // Now, note that hedera::newState returns MerkleStateRoot instances that delegate
-        // their lifecycle methods to an injected instance of MerkleStateLifecycles---and
-        // hedera::newState injects an instance of MerkleStateLifecyclesImpl which primarily
-        // delegates these calls back to the Hedera instance itself.
-        //
-        // Thus, the Hedera instance centralizes nearly all the setup and runtime logic for the
-        // application. It implements this logic by instantiating a Dagger2 @Singleton component
-        // whose object graph roots include the Ingest, PreHandle, Handle, and Query workflows;
-        // as well as other infrastructure components that need to be initialized or accessed
-        // at specific points in the Swirlds application lifecycle.
-        final Platform platform = platformBuilder.build();
+        final var platform = platformBuilder.build();
         hedera.init(platform, selfId);
         platform.start();
         hedera.run();
     }
 
-    private static void initLogging() {
-        final var log4jPath = getAbsolutePath(LOG4J_FILE_NAME);
-        try {
-            Log4jSetup.startLoggingFramework(log4jPath).await();
-        } catch (final InterruptedException e) {
-            // since the logging framework has not been instantiated, also log to stderr
-            e.printStackTrace();
-            Thread.currentThread().interrupt();
-            throw new RuntimeException("Interrupted while waiting for log4j to initialize", e);
-        }
+    /**
+     * Returns the event stream name for the given node id.
+     *
+     * @param nodeId the node id
+     * @param root the platform merkle state root
+     * @return the event stream name
+     */
+    private static String canonicalEventStreamLoc(final long nodeId, @NonNull final State root) {
+        final var nodeStore = new ReadableNodeStoreImpl(root.getReadableStates(AddressBookService.NAME));
+        final var accountId = requireNonNull(nodeStore.get(nodeId)).accountIdOrThrow();
+        return accountId.shardNum() + "." + accountId.realmNum() + "." + accountId.accountNumOrThrow();
     }
 
     /**
-     * Build the configuration for this node.
+     * Creates a canonical {@link Hedera} instance for the given node id and metrics.
+     *
+     * @param metrics  the metrics
+     * @return the {@link Hedera} instance
+     */
+    public static Hedera newHedera(@NonNull final Metrics metrics) {
+        requireNonNull(metrics);
+        return new Hedera(
+                ConstructableRegistry.getInstance(),
+                ServicesRegistryImpl::new,
+                new OrderedServiceMigrator(),
+                InstantSource.system(),
+                DiskStartupNetworks::new,
+                TssBlockHashSigner::new,
+                HintsServiceImpl::new,
+                HistoryServiceImpl::new,
+                metrics);
+    }
+
+    /**
+     * Builds the platform configuration for this node.
      *
      * @return the configuration
      */
     @NonNull
-    private static Configuration buildConfiguration() {
+    public static Configuration buildPlatformConfig() {
         final ConfigurationBuilder configurationBuilder = ConfigurationBuilder.create()
                 .withSource(SystemEnvironmentConfigSource.getInstance())
                 .withSource(SystemPropertiesConfigSource.getInstance());
-        rethrowIO(() ->
-                BootstrapUtils.setupConfigBuilder(configurationBuilder, getAbsolutePath(DEFAULT_SETTINGS_FILE_NAME)));
+
+        rethrowIO(() -> BootstrapUtils.setupConfigBuilder(
+                configurationBuilder,
+                getAbsolutePath(DEFAULT_SETTINGS_FILE_NAME),
+                getAbsolutePath(DEFAULT_OVERRIDES_YAML_FILE_NAME)));
         final Configuration configuration = configurationBuilder.build();
         checkConfiguration(configuration);
         return configuration;
     }
 
     /**
-     * Selects the node to run locally from either the command line arguments or the address book.
+     * Ensures there is exactly 1 node to run.
      *
-     * @param nodesToRun        the list of nodes configured to run based on the address book.
-     * @param localNodesToStart the node ids specified on the command line.
+     * @param nodesToRun        the list of nodes configured to run.
      * @return the node which should be run locally.
      * @throws ConfigurationException if more than one node would be started or the requested node is not configured.
      */
-    private static NodeId ensureSingleNode(
-            @NonNull final List<NodeId> nodesToRun, @NonNull final Set<NodeId> localNodesToStart) {
+    private static NodeId ensureSingleNode(@NonNull final List<NodeId> nodesToRun) {
         requireNonNull(nodesToRun);
-        requireNonNull(localNodesToStart);
-        // If no node is specified on the command line and detection by AB IP address is ambiguous, exit.
-        if (nodesToRun.size() > 1 && localNodesToStart.isEmpty()) {
-            logger.error(
-                    EXCEPTION.getMarker(),
-                    "Multiple nodes are configured to run. Only one node can be started per java process.");
-            exitSystem(NODE_ADDRESS_MISMATCH);
-            throw new ConfigurationException(
-                    "Multiple nodes are configured to run. Only one node can be started per java process.");
+
+        logger.info(STARTUP.getMarker(), "The following nodes {} are set to run locally", nodesToRun);
+        if (nodesToRun.isEmpty()) {
+            final String errorMessage = "No nodes are configured to run locally.";
+            logger.error(STARTUP.getMarker(), errorMessage);
+            exitSystem(NODE_ADDRESS_MISMATCH, errorMessage);
+            // the following throw is not reachable in production,
+            // but reachable in testing with static mocked system exit calls.
+            throw new ConfigurationException(errorMessage);
         }
 
-        // If a node is specified on the command line, use that node.
-        final NodeId requestedNodeId = localNodesToStart.stream().findFirst().orElse(null);
-
-        // If a node is specified on the command line but does not have a matching local IP address in the AB, exit.
-        if (nodesToRun.size() > 1 && !nodesToRun.contains(requestedNodeId)) {
-            logger.error(
-                    EXCEPTION.getMarker(),
-                    "The requested node id {} is not configured to run. Please check the address book.",
-                    requestedNodeId);
-            exitSystem(NODE_ADDRESS_MISMATCH);
-            throw new ConfigurationException(String.format(
-                    "The requested node id %s is not configured to run. Please check the address book.",
-                    requestedNodeId));
+        if (nodesToRun.size() > 1) {
+            final String errorMessage = "Multiple nodes are configured to run locally.";
+            logger.error(EXCEPTION.getMarker(), errorMessage);
+            exitSystem(NODE_ADDRESS_MISMATCH, errorMessage);
+            // the following throw is not reachable in production,
+            // but reachable in testing with static mocked system exit calls.
+            throw new ConfigurationException(errorMessage);
         }
-
-        // Return either the node requested via the command line or the only matching node from the AB.
-        return requestedNodeId != null ? requestedNodeId : nodesToRun.get(0);
+        return nodesToRun.getFirst();
     }
 
     /**
-     * Loads the address book from the specified path.
+     * Loads the legacy address book if it is present. Can be removed once the roster lifecycle is enabled.
      *
-     * @param addressBookPath the relative path and file name of the address book.
      * @return the address book.
      */
-    private static AddressBook loadAddressBook(@NonNull final String addressBookPath) {
-        requireNonNull(addressBookPath);
+    @Deprecated
+    private static Optional<AddressBook> loadLegacyAddressBook() {
         try {
             final LegacyConfigProperties props =
-                    LegacyConfigPropertiesLoader.loadConfigFile(getAbsolutePath(addressBookPath));
+                    LegacyConfigPropertiesLoader.loadConfigFile(getAbsolutePath(DEFAULT_CONFIG_FILE_NAME));
             props.appConfig().ifPresent(c -> ParameterProvider.getInstance().setParameters(c.params()));
-            return props.getAddressBook();
-        } catch (final Exception e) {
-            logger.error(EXCEPTION.getMarker(), "Error loading address book", e);
-            exitSystem(CONFIGURATION_ERROR);
-            throw e;
+            return Optional.of(props.getAddressBook());
+        } catch (final Exception ignore) {
+            return Optional.empty();
+        }
+    }
+
+    /**
+     * Get the initial state to be used by this node. May return a state loaded from disk, or may return a genesis state
+     * if no valid state is found on disk.
+     *
+     * @param configuration      the configuration for this node
+     * @param softwareVersion     the software version of the app
+     * @param stateRootSupplier a supplier that can build a genesis state
+     * @param mainClassName       the name of the app's SwirldMain class
+     * @param swirldName          the name of this swirld
+     * @param selfId              the node id of this node
+     * @return the initial state to be used by this node
+     */
+    @NonNull
+    private static HashedReservedSignedState loadInitialState(
+            @NonNull final Configuration configuration,
+            @NonNull final RecycleBin recycleBin,
+            @NonNull final SoftwareVersion softwareVersion,
+            @NonNull final Supplier<PlatformMerkleStateRoot> stateRootSupplier,
+            @NonNull final String mainClassName,
+            @NonNull final String swirldName,
+            @NonNull final NodeId selfId) {
+        final var loadedState = StartupStateUtils.loadStateFile(
+                configuration, recycleBin, selfId, mainClassName, swirldName, softwareVersion);
+        try (loadedState) {
+            if (loadedState.isNotNull()) {
+                logger.info(
+                        STARTUP.getMarker(),
+                        new SavedStateLoadedPayload(
+                                loadedState.get().getRound(), loadedState.get().getConsensusTimestamp()));
+                return copyInitialSignedState(configuration, loadedState.get());
+            }
+        }
+        final var stateRoot = stateRootSupplier.get();
+        final var signedState = new SignedState(
+                configuration, CryptoStatic::verifySignature, stateRoot, "genesis state", false, false, false);
+        final var reservedSignedState = signedState.reserve("initial reservation on genesis state");
+        try (reservedSignedState) {
+            return copyInitialSignedState(configuration, reservedSignedState.get());
         }
     }
 
     private static @NonNull Hedera hederaOrThrow() {
         return requireNonNull(hedera);
-    }
-
-    private static Hedera newHedera(@NonNull final NodeId selfNodeId) {
-        return new Hedera(
-                ConstructableRegistry.getInstance(),
-                ServicesRegistryImpl::new,
-                new OrderedServiceMigrator(),
-                InstantSource.system(),
-                appContext -> new TssBaseServiceImpl(
-                        appContext,
-                        ForkJoinPool.commonPool(),
-                        ForkJoinPool.commonPool(),
-                        new TssLibraryImpl(appContext),
-                        ForkJoinPool.commonPool(),
-                        metrics),
-                DiskStartupNetworks::new,
-                selfNodeId);
     }
 
     @VisibleForTesting
